refactor: update mapping references in Car and User models; improve CostRepository and CostService methods consistency